# artificial-stupidity

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  training-overnight.log.first-attempt  training-overnight.log.phase1-lr0.0003  training-overnight.log.phase2-lr0.001-FAILED  training-overnight.log.phase3-lr0.0005-EXPLODED  vocab.txt
.cargo/: config.toml
data/: dialogs.txt
docs/: discord-ai-setup.md  format-analysis.md  improvement-survey.md  manual-test-2026-05-22.md  manual-test-2026-06-02-L.md  manual-test-2026-06-02-N.md  manual-test-2026-06-09-L-baseline-register.md  manual-test-2026-06-09-P-standard.md  next-session.md  optimization-roadmap.md  training-day-2026-05-21.md  training-day-2026-05-22.md  training-day-2026-06-02.md  training-day-2026-06-09.md
scripts/: build_trim_corpus.sh  ingest_oasst.py  probe_bot.sh  probe_register.sh
src/: dialogs.rs  gpu.rs  lib.rs  machine_learning.rs  main.rs  memory.rs  neural_network.rs  ollama.rs  persist.rs  persons.rs  rag.rs  teacher.rs  text_utils.rs  tokenizer.rs  vocab.txt
src/embeddings/: mod.rs
