[package]
name = "rust_fun"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
anyhow = "1.0"
rayon = "1.10"
tiny_http = "0.12"
ureq = { version = "2", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
wide = "0.7"
tensor-ash = { path = "../tensor-ash" }

[profile.release]
opt-level = 3
lto = "thin"
